ingress-frigate.yaml
## Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: frigate
spec:
  ingressClassName: traefik-external
  rules:
  - host: frigate.farhoodliquor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  frigate
            port:
              number: 8971
  tls:
  - hosts:
    - frigate.farhoodliquor.com
    secretName: farhoodliquor-com-cert-letsencrypt-prod
